tests/suite/snapshots/suite__case_6jqw.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: CommentText
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 11
    line: 0
    column: 11
- token: Break
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 13
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 16
    line: 1
    column: 3
- token: Separator
  start:
    index: 16
    line: 1
    column: 3
  end:
    index: 17
    line: 1
    column: 4
- token: Literal
  start:
    index: 17
    line: 1
    column: 4
  end:
    index: 18
    line: 1
    column: 5
- token: Break
  start:
    index: 18
    line: 1
    column: 5
  end:
    index: 20
    line: 2
    column: 0
- token: Indent
  start:
    index: 20
    line: 2
    column: 0
  end:
    index: 22
    line: 2
    column: 2
- token: Scalar
  start:
    index: 22
    line: 2
    column: 2
  end:
    index: 31
    line: 2
    column: 11
- token: ScalarBreak
  start:
    index: 31
    line: 2
    column: 11
  end:
    index: 33
    line: 3
    column: 0
- token: Indent
  start:
    index: 33
    line: 3
    column: 0
  end:
    index: 35
    line: 3
    column: 2
- token: Scalar
  start:
    index: 35
    line: 3
    column: 2
  end:
    index: 46
    line: 3
    column: 13
- token: ScalarBreak
  start:
    index: 46
    line: 3
    column: 13
  end:
    index: 48
    line: 4
    column: 0

