tests/suite/snapshots/suite__case_6jwb.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: TagHandle
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 7
    line: 0
    column: 7
- token: TagSuffix
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 10
    line: 0
    column: 10
- token: Break
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: Indent
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 2
- token: SequenceEntry
  start:
    index: 14
    line: 1
    column: 2
  end:
    index: 15
    line: 1
    column: 3
- token: Separator
  start:
    index: 15
    line: 1
    column: 3
  end:
    index: 16
    line: 1
    column: 4
- token: TagHandle
  start:
    index: 16
    line: 1
    column: 4
  end:
    index: 18
    line: 1
    column: 6
- token: TagSuffix
  start:
    index: 18
    line: 1
    column: 6
  end:
    index: 21
    line: 1
    column: 9
- token: Separator
  start:
    index: 21
    line: 1
    column: 9
  end:
    index: 22
    line: 1
    column: 10
- token: Scalar
  start:
    index: 22
    line: 1
    column: 10
  end:
    index: 23
    line: 1
    column: 11
- token: Break
  start:
    index: 23
    line: 1
    column: 11
  end:
    index: 25
    line: 2
    column: 0
- token: Indent
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 27
    line: 2
    column: 2
- token: SequenceEntry
  start:
    index: 27
    line: 2
    column: 2
  end:
    index: 28
    line: 2
    column: 3
- token: Separator
  start:
    index: 28
    line: 2
    column: 3
  end:
    index: 29
    line: 2
    column: 4
- token: TagHandle
  start:
    index: 29
    line: 2
    column: 4
  end:
    index: 31
    line: 2
    column: 6
- token: TagSuffix
  start:
    index: 31
    line: 2
    column: 6
  end:
    index: 34
    line: 2
    column: 9
- token: Break
  start:
    index: 34
    line: 2
    column: 9
  end:
    index: 36
    line: 3
    column: 0
- token: Indent
  start:
    index: 36
    line: 3
    column: 0
  end:
    index: 40
    line: 3
    column: 4
- token: Scalar
  start:
    index: 40
    line: 3
    column: 4
  end:
    index: 43
    line: 3
    column: 7
- token: MappingValue
  start:
    index: 43
    line: 3
    column: 7
  end:
    index: 44
    line: 3
    column: 8
- token: Separator
  start:
    index: 44
    line: 3
    column: 8
  end:
    index: 45
    line: 3
    column: 9
- token: TagHandle
  start:
    index: 45
    line: 3
    column: 9
  end:
    index: 47
    line: 3
    column: 11
- token: TagSuffix
  start:
    index: 47
    line: 3
    column: 11
  end:
    index: 50
    line: 3
    column: 14
- token: Separator
  start:
    index: 50
    line: 3
    column: 14
  end:
    index: 51
    line: 3
    column: 15
- token: Scalar
  start:
    index: 51
    line: 3
    column: 15
  end:
    index: 56
    line: 3
    column: 20
- token: Break
  start:
    index: 56
    line: 3
    column: 20
  end:
    index: 58
    line: 4
    column: 0

