tests/suite/snapshots/suite__case_6kgn.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: MappingValue
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Separator
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Anchor
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: AnchorName
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 10
- token: Empty
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 10
- token: Break
  start:
    line: 1
    column: 10
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: MappingValue
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Separator
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Alias
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: AnchorName
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 10
- token: Break
  start:
    line: 2
    column: 10
  end:
    line: 3
    column: 0

