tests/suite/snapshots/suite__case_6m2f.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingKey
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Anchor
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: AnchorName
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Scalar
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Break
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 8
    line: 1
    column: 0
- token: Indent
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 0
- token: MappingValue
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 9
    line: 1
    column: 1
- token: Separator
  start:
    index: 9
    line: 1
    column: 1
  end:
    index: 10
    line: 1
    column: 2
- token: Anchor
  start:
    index: 10
    line: 1
    column: 2
  end:
    index: 11
    line: 1
    column: 3
- token: AnchorName
  start:
    index: 11
    line: 1
    column: 3
  end:
    index: 12
    line: 1
    column: 4
- token: Separator
  start:
    index: 12
    line: 1
    column: 4
  end:
    index: 13
    line: 1
    column: 5
- token: Scalar
  start:
    index: 13
    line: 1
    column: 5
  end:
    index: 14
    line: 1
    column: 6
- token: Break
  start:
    index: 14
    line: 1
    column: 6
  end:
    index: 16
    line: 2
    column: 0
- token: Indent
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 0
- token: Empty
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 0
- token: MappingValue
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 1
- token: Separator
  start:
    index: 17
    line: 2
    column: 1
  end:
    index: 18
    line: 2
    column: 2
- token: Alias
  start:
    index: 18
    line: 2
    column: 2
  end:
    index: 19
    line: 2
    column: 3
- token: AnchorName
  start:
    index: 19
    line: 2
    column: 3
  end:
    index: 20
    line: 2
    column: 4
- token: Break
  start:
    index: 20
    line: 2
    column: 4
  end:
    index: 22
    line: 3
    column: 0

