tests/suite/snapshots/suite__case_6pbe.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: MappingKey
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Break
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 8
    line: 2
    column: 0
- token: Indent
  start:
    index: 8
    line: 2
    column: 0
  end:
    index: 8
    line: 2
    column: 0
- token: SequenceEntry
  start:
    index: 8
    line: 2
    column: 0
  end:
    index: 9
    line: 2
    column: 1
- token: Separator
  start:
    index: 9
    line: 2
    column: 1
  end:
    index: 10
    line: 2
    column: 2
- token: Scalar
  start:
    index: 10
    line: 2
    column: 2
  end:
    index: 11
    line: 2
    column: 3
- token: Break
  start:
    index: 11
    line: 2
    column: 3
  end:
    index: 13
    line: 3
    column: 0
- token: Indent
  start:
    index: 13
    line: 3
    column: 0
  end:
    index: 13
    line: 3
    column: 0
- token: SequenceEntry
  start:
    index: 13
    line: 3
    column: 0
  end:
    index: 14
    line: 3
    column: 1
- token: Separator
  start:
    index: 14
    line: 3
    column: 1
  end:
    index: 15
    line: 3
    column: 2
- token: Scalar
  start:
    index: 15
    line: 3
    column: 2
  end:
    index: 16
    line: 3
    column: 3
- token: Break
  start:
    index: 16
    line: 3
    column: 3
  end:
    index: 18
    line: 4
    column: 0
- token: Indent
  start:
    index: 18
    line: 4
    column: 0
  end:
    index: 18
    line: 4
    column: 0
- token: MappingValue
  start:
    index: 18
    line: 4
    column: 0
  end:
    index: 19
    line: 4
    column: 1
- token: Break
  start:
    index: 19
    line: 4
    column: 1
  end:
    index: 21
    line: 5
    column: 0
- token: Indent
  start:
    index: 21
    line: 5
    column: 0
  end:
    index: 21
    line: 5
    column: 0
- token: SequenceEntry
  start:
    index: 21
    line: 5
    column: 0
  end:
    index: 22
    line: 5
    column: 1
- token: Separator
  start:
    index: 22
    line: 5
    column: 1
  end:
    index: 23
    line: 5
    column: 2
- token: Scalar
  start:
    index: 23
    line: 5
    column: 2
  end:
    index: 24
    line: 5
    column: 3
- token: Break
  start:
    index: 24
    line: 5
    column: 3
  end:
    index: 26
    line: 6
    column: 0
- token: Indent
  start:
    index: 26
    line: 6
    column: 0
  end:
    index: 26
    line: 6
    column: 0
- token: SequenceEntry
  start:
    index: 26
    line: 6
    column: 0
  end:
    index: 27
    line: 6
    column: 1
- token: Separator
  start:
    index: 27
    line: 6
    column: 1
  end:
    index: 28
    line: 6
    column: 2
- token: Scalar
  start:
    index: 28
    line: 6
    column: 2
  end:
    index: 29
    line: 6
    column: 3
- token: Break
  start:
    index: 29
    line: 6
    column: 3
  end:
    index: 31
    line: 7
    column: 0

