tests/suite/snapshots/suite__case_6s55.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \" invalid\\r\\n\""
  start:
    index: 22
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 0

