tests/suite/snapshots/suite__case_6vjk.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Folded
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 29
- token: ScalarSpace
  start:
    line: 1
    column: 29
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Scalar
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 30
- token: ScalarBreak
  start:
    line: 2
    column: 30
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: ScalarBreak
  start:
    line: 3
    column: 0
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Scalar
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 15
- token: ScalarBreak
  start:
    line: 4
    column: 15
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Scalar
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 24
- token: ScalarBreak
  start:
    line: 5
    column: 24
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: ScalarBreak
  start:
    line: 6
    column: 0
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Scalar
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 13
- token: ScalarBreak
  start:
    line: 7
    column: 13
  end:
    line: 8
    column: 0

