tests/suite/snapshots/suite__case_6wlz.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: CommentText
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 9
    line: 0
    column: 9
- token: Break
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 3
- token: Break
  start:
    index: 14
    line: 1
    column: 3
  end:
    index: 16
    line: 2
    column: 0
- token: Indent
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 0
- token: TagHandle
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 1
- token: TagSuffix
  start:
    index: 17
    line: 2
    column: 1
  end:
    index: 20
    line: 2
    column: 4
- token: Separator
  start:
    index: 20
    line: 2
    column: 4
  end:
    index: 21
    line: 2
    column: 5
- token: DoubleQuote
  start:
    index: 21
    line: 2
    column: 5
  end:
    index: 22
    line: 2
    column: 6
- token: DoubleQuoted
  start:
    index: 22
    line: 2
    column: 6
  end:
    index: 25
    line: 2
    column: 9
- token: DoubleQuote
  start:
    index: 25
    line: 2
    column: 9
  end:
    index: 26
    line: 2
    column: 10
- token: Break
  start:
    index: 26
    line: 2
    column: 10
  end:
    index: 28
    line: 3
    column: 0
- token: DocumentEnd
  start:
    index: 28
    line: 3
    column: 0
  end:
    index: 31
    line: 3
    column: 3
- token: Break
  start:
    index: 31
    line: 3
    column: 3
  end:
    index: 33
    line: 4
    column: 0
- token: Comment
  start:
    index: 33
    line: 4
    column: 0
  end:
    index: 34
    line: 4
    column: 1
- token: CommentText
  start:
    index: 34
    line: 4
    column: 1
  end:
    index: 41
    line: 4
    column: 8
- token: Break
  start:
    index: 41
    line: 4
    column: 8
  end:
    index: 43
    line: 5
    column: 0
- token: Directive
  start:
    index: 43
    line: 5
    column: 0
  end:
    index: 44
    line: 5
    column: 1
- token: DirectiveName
  start:
    index: 44
    line: 5
    column: 1
  end:
    index: 47
    line: 5
    column: 4
- token: Separator
  start:
    index: 47
    line: 5
    column: 4
  end:
    index: 48
    line: 5
    column: 5
- token: TagHandle
  start:
    index: 48
    line: 5
    column: 5
  end:
    index: 49
    line: 5
    column: 6
- token: Separator
  start:
    index: 49
    line: 5
    column: 6
  end:
    index: 50
    line: 5
    column: 7
- token: TagPrefix
  start:
    index: 50
    line: 5
    column: 7
  end:
    index: 75
    line: 5
    column: 32
- token: Break
  start:
    index: 75
    line: 5
    column: 32
  end:
    index: 77
    line: 6
    column: 0
- token: DirectivesEnd
  start:
    index: 77
    line: 6
    column: 0
  end:
    index: 80
    line: 6
    column: 3
- token: Break
  start:
    index: 80
    line: 6
    column: 3
  end:
    index: 82
    line: 7
    column: 0
- token: Indent
  start:
    index: 82
    line: 7
    column: 0
  end:
    index: 82
    line: 7
    column: 0
- token: TagHandle
  start:
    index: 82
    line: 7
    column: 0
  end:
    index: 83
    line: 7
    column: 1
- token: TagSuffix
  start:
    index: 83
    line: 7
    column: 1
  end:
    index: 86
    line: 7
    column: 4
- token: Separator
  start:
    index: 86
    line: 7
    column: 4
  end:
    index: 87
    line: 7
    column: 5
- token: DoubleQuote
  start:
    index: 87
    line: 7
    column: 5
  end:
    index: 88
    line: 7
    column: 6
- token: DoubleQuoted
  start:
    index: 88
    line: 7
    column: 6
  end:
    index: 91
    line: 7
    column: 9
- token: DoubleQuote
  start:
    index: 91
    line: 7
    column: 9
  end:
    index: 92
    line: 7
    column: 10
- token: Break
  start:
    index: 92
    line: 7
    column: 10
  end:
    index: 94
    line: 8
    column: 0

